Phase 1 Implementation completed

--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "@sparrow/d-injector",
+  "name": "@sparrow/injector",
   "version": "0.0.1",
   "description": "Tiny dependency injection module",
   "main": "index.js", 
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Madhust/d-injector.git"
+    "url": "git+https://github.com/Madhust/injector.git"
   },
   "dependencies": {
     
